<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/ToolbarTitle"
        android:background="@color/actionbar_background" />

    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/title_my_nanodegree_apps"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/actionbar_background_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_spotify_streamer"
                android:text="@string/spotify_streamer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_super_duo_scores"
                android:text="@string/super_duo_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_super_duo_library"
                android:text="@string/super_duo_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_build_it_bigger"
                android:text="@string/build_it_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_xyz_reader"
                android:text="@string/xyz_reader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/PortfolioButton"
                android:id="@+id/btn_capstone"
                android:text="@string/capstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
